# telegram-username-occupier

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config_reader.py  main.py  pyproject.toml
fragment/: __init__.py  base.py  client.py
fragment/models/: __init__.py  status.py  username.py
resources/: input_usernames.txt
