[tool.poetry]
name = "telegram_username_occupier"
version = "0.1.0"
description = ""
authors = ["lplpqq <69588388+lplpqq@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
lxml = "^5.2.1"
aiohttp = "^3.9.5"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"
telethon = "^1.35.0"
pydantic-settings = "^2.14.1"
kurigram = "^2.2.23"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
